hphp/hack/test/typecheck/global_const15.php.exp
ERROR: File "global_const15.php", line 5, characters 16-21:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "global_const15.php", line 5, characters 16-21:
Illegal constant value (Naming[2023])
