hphp/hack/test/typecheck/global_const15.php
<?hh

class :div extends XHPTest {}

const :div X = <div/>;
